# PubPlotLib

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  pytest.ini
docs/: conf.py
examples/: Test.ipynb  TestStyleSetting.ipynb
pubplotlib/: __init__.py  pubplotlib.py  version.py
pubplotlib/assets/: aanda.mplstyle
