# BUILD SYSTEM
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# METADATA FOR THE PROJECT
[project]
name = "pubplotlib"
version = "0.1.10"
description = "Make publication friendly plots easy!"
authors = [
    { name = "Pierpaolo Condò", email = "pierpaolo.condo@gmail.com" },
    { name = "Michele Berretti", email = "michele.berretti1999@gmail.com" },
    ]

readme = "README.md"
requires-python = ">=3.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3)",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
keywords = ["matplotlib", "publication", "plot", "figure", "science"]
dependencies = [
    "matplotlib>=3.4",   # for style and formatting features
    "PyYAML>=5.3",       # for YAML file loading
]

# This section links back to your GitHub repo
[project.urls]
Homepage = "https://github.com/pier-astro/PubPlotLib"
Issues = "https://github.com/pier-astro/PubPlotLib/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pubplotlib = ["assets/*"]